--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: reese_gift
-description: "A new Flutter project."
+description: "A simple Flutter-based camera app."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.0+1
 
 environment:
     sdk: ^3.10.8
@@ -42,6 +42,7 @@ dependencies:
     sensors_plus: ^7.0.0
 
 dev_dependencies:
+    flutter_launcher_icons: "^0.13.1"
     flutter_test:
         sdk: flutter
 
@@ -57,42 +58,18 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-    # The following line ensures that the Material Icons font is
-    # included with your application, so that you can use the icons in
-    # the material Icons class.
     uses-material-design: true
-
-    # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
-
-    # An image asset can refer to one or more resolution-specific "variants", see
-    # https://flutter.dev/to/resolution-aware-images
-
-    # For details regarding adding assets from package dependencies, see
-    # https://flutter.dev/to/asset-from-package
-
-    # To add custom fonts to your application, add a fonts section here,
-    # in this "flutter" section. Each entry in this list should have a
-    # "family" key with the font family name, and a "fonts" key with a
-    # list giving the asset and other descriptors for the font. For
-    # example:
-    # fonts:
-    #   - family: Schyler
-    #     fonts:
-    #       - asset: fonts/Schyler-Regular.ttf
-    #       - asset: fonts/Schyler-Italic.ttf
-    #         style: italic
-    #   - family: Trajan Pro
-    #     fonts:
-    #       - asset: fonts/TrajanPro.ttf
-    #       - asset: fonts/TrajanPro_Bold.ttf
-    #         weight: 700
-    #
-    # For details regarding fonts from package dependencies,
-    # see https://flutter.dev/to/font-from-package
+    assets:
+        - assets/
     fonts:
         - family: PermanentMarker
           fonts:
               - asset: assets/fonts/PermanentMarker-Regular.ttf
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/ReeseCheesePlease_App-Icon.png"
+    adaptive_icon_background: "#1A1A1A"
+    adaptive_icon_foreground: "assets/ReeseCheesePlease_App-Icon.png"
+    remove_alpha_ios: true
