--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
     cupertino_icons: ^1.0.8
-    camera: ^0.11.4
+    camera: ^0.12.0
     path_provider: ^2.1.5
     path: ^1.9.1
     gal: ^2.3.2
@@ -42,7 +42,7 @@ dependencies:
     sensors_plus: ^7.0.0
 
 dev_dependencies:
-    flutter_launcher_icons: "^0.13.1"
+    flutter_launcher_icons: ^0.14.4
     flutter_test:
         sdk: flutter
 
