--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.1+1
+version: 1.2.0+1
 
 environment:
     sdk: ^3.10.8
@@ -40,6 +40,9 @@ dependencies:
     gal: ^2.3.2
     intl: ^0.20.2
     sensors_plus: ^7.0.0
+    shared_preferences: ^2.5.4
+    vibration: ^3.1.7
+    audioplayers: ^6.5.1
 
 dev_dependencies:
     flutter_launcher_icons: ^0.14.4
@@ -61,6 +64,8 @@ flutter:
     uses-material-design: true
     assets:
         - assets/
+        - assets/images/
+        - assets/audio/
     fonts:
         - family: PermanentMarker
           fonts:
